<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2c_pwm</name>
  <version>0.1.0</version>
  <description>ROS2 (robot operating system) node for controlling PWM boards
               based on the PCA9685 chip with an I2C interface. Primary use is
               for controlling RC Servos and DC motors via PWM.
               
               Originally written by Bradan Lane at https://gitlab.com/bradanlane/ros-i2cpwmboard.
               Copied and modified for ROS2 as a learning experience.
  </description>
  <maintainer email="kerry.t.johnson@gmail.com">Kerry Johnson</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
